Modified gui added different local storage

--- a/src/main/resources/assets/syncmatica/lang/en_us.json
+++ b/src/main/resources/assets/syncmatica/lang/en_us.json
@@ -5,5 +5,8 @@
 	"syncmatica.gui.button.unload": "Unload",
 	"syncmatica.gui.button.remove": "Remove",
 	"syncmatica.gui.button.download": "Download",
-	"syncmatica.gui.title.manage_server_placements": "Manage Server Placements"
+	"syncmatica.gui.title.manage_server_placements": "Manage Server Placements",
+	"syncmatica.gui.label.placement_info.file_name": "File Name",
+	"syncmatica.gui.label.placement_info.position": "Origin (xyz)",
+	"syncmatica.gui.label.placement_info.dimension_id": "Dimension"
 }
