--- a/src/main/resources/assets/syncmatica/lang/en_us.json
+++ b/src/main/resources/assets/syncmatica/lang/en_us.json
@@ -11,5 +11,11 @@
 	"syncmatica.gui.title.manage_server_placements": "Manage Server Placements",
 	"syncmatica.gui.label.placement_info.file_name": "File Name",
 	"syncmatica.gui.label.placement_info.position": "Origin (xyz)",
-	"syncmatica.gui.label.placement_info.dimension_id": "Dimension"
+	"syncmatica.gui.label.placement_info.dimension_id": "Dimension",
+	"syncmatica.error.share_without_shift": "Press shift to share",
+	"syncmatica.error.share_modified_subregions": "Share Error - Cannot share placements with modified subregions yet - please reset the subregions.",
+	"syncmatica.error.modification_deny": "Denied Modification request - Another user is already modifying this placement.",
+	"syncmatica.error.player_dimension_mismatch": "Player needs to be in the same dimension as placement to load.",
+	"syncmatica.error.create_from_schematic": "Error creating Syncmatic from schematic: {}",
+	"syncmatica.success.modification_accepted": "Modification request accept - Lock the placement again to share the results to the server"
 }
