Add tip for how to convert nbt files and removed crash when loading them

--- a/src/main/resources/assets/syncmatica/lang/en_us.json
+++ b/src/main/resources/assets/syncmatica/lang/en_us.json
@@ -17,5 +17,7 @@
 	"syncmatica.error.modification_deny": "Denied Modification request - Another user is already modifying this placement.",
 	"syncmatica.error.player_dimension_mismatch": "Player needs to be in the same dimension as placement to load.",
 	"syncmatica.error.create_from_schematic": "Error creating Syncmatic from schematic: {}",
+	"syncmatica.error.share_incompatible_schematic": "Convert this file using the Schematic Manager from the main menu to share it",
+	"syncmatica.error.invalid_file": "Cannot share this type of file",
 	"syncmatica.success.modification_accepted": "Modification request accept - Lock the placement again to share the results to the server"
 }
